server side validation

--- a/frontend/src/app/views/dashboard/dashboard.component.html
+++ b/frontend/src/app/views/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
 
     <!-- Remind Passowrd -->
     <div id="formFooter">
-      <a class="underlineHover" href="javascript:;" (click)="onClick()">Logout</a>
+      <a class="underlineHover" href="javascript:;" (click)="logout()">Logout</a>
     </div>
 
   </div>
